# Messenger

./: CMakeLists.txt  README.md
src/client/: mainClient.cpp
src/client/cpp/: client.cpp
src/client/headers/: client.h
src/server/: mainServer.cpp
src/server/cpp/: server.cpp
src/server/headers/: server.h
src/structures/: User.h
src/tcp/: TCP.h
